Firebase authentication and database added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,11 @@ dependencies:
   shared_preferences: ^2.2.0
   flutter_svg: ^2.0.7
   intl: ^0.18.1
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.15.3
-  cloud_firestore: ^4.13.6
+  firebase_core: ^2.25.4
+  firebase_auth: ^4.17.4
+  cloud_firestore: ^4.15.4
+  firebase_auth_web: ^5.8.14
+
   
 dev_dependencies:
   flutter_test:
