--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,8 @@ dependencies:
   firebase_auth: ^4.17.4
   cloud_firestore: ^4.15.4
   firebase_auth_web: ^5.8.14
-
+  font_awesome_flutter: ^10.7.0
+  url_launcher: ^6.2.5
   
 dev_dependencies:
   flutter_test:
