--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,10 @@ dependencies:
   firebase_auth_web: ^5.8.14
   font_awesome_flutter: ^10.7.0
   url_launcher: ^6.2.5
-  
+  file_saver: ^0.2.13
+  csv: ^5.0.1
+  path_provider: ^2.1.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
