--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.donorconnect"> <!-- Replace with your actual package name -->
+    package="com.raktpurak.donorconnect"> <!-- Replace with your actual package name -->
 
     <!-- ✅ Required for Firebase and network calls -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
-        android:label="RCF"
+        android:label="Raktpurak"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
